# HalfMesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: l_domain.msh  plate.msh  untitled.geo
include/: common.hpp  edge.hpp  face.hpp  general.hpp  half_edge.hpp  mesh.hpp  mesh_io.hpp  property.hpp  vertex.hpp
